--- a/MyBookshelfData/MyBookshelfData.csproj
+++ b/MyBookshelfData/MyBookshelfData.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Book.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="Review.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
